Adjusted UserInterfaceHandler class Signed-off-by: LSK100 <490679@student.saxion.nl>