@@ -11,10 +11,7 @@ import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.LinkedList;
-import java.util.Date;
-import java.util.Random;
-import java.util.Scanner;
+import java.util.*;
 
 public class UserInterfaceHandler {
 
@@ -23,30 +20,45 @@ public class UserInterfaceHandler {
     AVLTree<Package> packageTree=new AVLTree<Package>();
 
     public UserInterfaceHandler() {
+        //Read from the CSV file of clients
         Helper.readClientsFromCSV("src/com/company/csvFiles/Clients.csv",clients);
+        //Read from the CSV file of Packages
         Helper.readPackagesFromCSV("src/com/company/csvFiles/Packages.csv",packages,clients);
+        assert clients.size() > 0 || packages.size() > 0 : "Clients or Packages were not loaded to the list"; //Post-cond
+        //Get random value
         Random rand=new Random();
-        for (int i = 0; i < 10000000; i++) {
-            packages.add(new Package(packages.getLast().getId()+1,50,30,100,clients.get(rand.nextInt(0,clients.size()-1)),new Date(),50));
+        assert packages.size() > 0 : "Packages list is empty!"; //Pre-cond
+        for (int i = 0; i < 500000; i++) {
+            packages.add(new Package(packages.get(packages.size()-1).getId()+1,50,30,100,clients.get(rand.nextInt(0,clients.size()-1)),new Date(),50));
         }
-
-         for (Package p: packages) {
+        //assert packages.size() > 10000000 : "Random packages were not loaded correctly to the package list"; //Post-cond
+        Instant now = Instant.now();
+        for (Package p: packages) {
             packageTree.root=packageTree.insert(packageTree.root,p);
         }
-        System.out.println(packages.getLast().getId());
+        Duration duration = Duration.between(now,Instant.now());
+        System.out.println("Time took to insert in AVLTree: "  +duration.toNanos() + " nano sec");
+        System.out.println(packages.get(packages.size()-1).getId());
     }
 
     //make it private later to call in UserInterface
     public void findTopTen()  {
         try {
-            System.out.println("Please enter the start date: (dd-mm-yyyy)");
-            Date startDate=new SimpleDateFormat("dd-MM-yyyy").parse(readString());
-            System.out.println("Please enter the end date: (dd-mm-yyyy)");
-            Date endDate=new SimpleDateFormat("dd-MM-yyyy").parse(readString());
+            //todo: fix this
+            SimpleDateFormat sdf = new SimpleDateFormat("dd-MM-yyyy");
+            System.out.println("Please enter the start date: (dd), from 1 to 31 ");
+            int startDate = readInt();
+            assert startDate > 0 && startDate < 32 : "Start date should be between 1 and 31"; //Post-cond
+            System.out.println("Please enter the end date: (dd), from 1 to 31 ");
+            int endDate = readInt();
+            assert endDate > 0 && endDate < 32 : "End date should be before 1 to 31"; //Post-cond
             LinkedList<Package> tempPackages=new LinkedList<>();
+            Date srtDate = sdf.parse(startDate+"-12-2021");
+            Date enDate = sdf.parse(endDate+"-12-2021");
             for (Package p: packages) {
-                if(p.getEntryDate().after(startDate)&&p.getEntryDate().before(endDate)){
+                if(p.getEntryDate().after(srtDate) && p.getEntryDate().before(enDate)){
                     tempPackages.add(p);
+                    System.out.println(p.getClient());
                 }
             }
             LinkedList<Client> tempClients = new LinkedList<>(clients);
@@ -66,40 +78,55 @@ public class UserInterfaceHandler {
             }
         } catch (ParseException e) {
             System.err.println("Wrong format.");
+            System.err.println(e.getMessage());
         }
     }
 
     public void getPackageStatus(){
         System.out.println("Please enter the id of the package: ");
         int id=readInt();
-        LinkedList<Package> tempPackages=new LinkedList<>(packages);
         Package temp = new Package(id);
-        Search<Package> searchPackage=new Search<>();
-        //To measure the time to execute the binary search
-        Instant now=Instant.now();
-        //binary search in LinkedList
-        Package resultPackage= searchPackage.binarySearch(tempPackages,temp);
-        Duration duration=Duration.between(now, Instant.now());
-        if (resultPackage == null) {
-            System.out.println("Package not found!");
-        } else {
-            System.out.println("Status: "+resultPackage.getStatus());
+        LinkedList<Package> tempPackages=new LinkedList<>(packages);
+        binarySearch(tempPackages,temp);
+        ArrayList<Package> tempPackages1 = new ArrayList<>();
+        Instant now = Instant.now();
+        for (Package p: packages) {
+            tempPackages1.add(p);
         }
-        System.out.println("The time used for searching the package using binary search in the LinkedList is: " + duration.toNanos() + " nano sec.");
-        System.out.println();
+        System.out.println("Time took to insert packages into ArrayList: "+Duration.between(now,Instant.now()).toNanos() +" nano sec");
+        binarySearch(tempPackages1,temp);
         //search in AVL tree
-        //todo: check this
-        Instant now1 = Instant.now();
-        Node<Package> resultNode=packageTree.find(temp);
-        Instant now2 = Instant.now();
-        Duration duration2 = Duration.between(now1,now2);
+        searchAVLTree(temp);
+    }
 
+    public void searchAVLTree (Package p) {
+        Instant now = Instant.now();
+        Node<Package> resultNode=packageTree.find(p);
+        Duration duration = Duration.between(now,Instant.now());
         if (resultNode == null) {
             System.out.println("Package not found!");
         } else {
             System.out.println("Status: "+resultNode);
         }
-        System.out.println("The time used for searching the package in the AVL tree is: " + duration2.toNanos() + " nano sec.");
+        System.out.println("The time used for searching the package in the AVL tree is: " + duration.toNanos() + " nano sec.");
+    }
+
+
+    public void binarySearch (List<Package> list,Package p) {
+        Search<Package> searchPackage=new Search<>();
+        //To measure the time to execute the binary search
+        Instant now = Instant.now();
+        //binary search in LinkedList
+        Package resultPackage= searchPackage.binarySearch(list,p);
+        Duration duration = Duration.between(now, Instant.now());
+        if (resultPackage == null) {
+            System.out.println("Package not found!");
+        } else {
+            System.out.println(resultPackage.getId());
+            System.out.println("Status: "+resultPackage.getStatus());
+        }
+        System.out.println("The time used for searching the package using binary search in the LinkedList is: " + duration.toNanos() + " nano sec.");
+        System.out.println();
     }
 
     //Read user input as a string
@@ -109,6 +136,10 @@ public class UserInterfaceHandler {
 
     //Read user input as integer
     public static int readInt () {
-        return new Scanner(System.in).nextInt();
+        int input = -1;
+        Scanner sc = new Scanner(System.in);
+        while (!sc.hasNextInt()) sc.next();
+        input = sc.nextInt();
+        return input;
     }
 }
